# ScytheRecruitment

./: .gitignore  README.md
file_system_watcher/: CMakeLists.txt  catgenerator.cpp  catgenerator.h  folderEventStruct.h  listHandler.cpp  listHandler.h  listModel.cpp  listModel.h  listmodelwatchedpath.cpp  listmodelwatchedpath.h  listwatchedpath.cpp  listwatchedpath.h  main.cpp  main.qml  qml.qrc  tablehandler.cpp  tablehandler.h  tablemodel.cpp  tablemodel.h  testwatcher.cpp  testwatcher.h  watcher.cpp  watcher.h
